# chess-v2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CLI.cppm  CLI.h  CMakeLists.txt  Logger.h  UCI.cppm  UCI.h  main.cpp
src/core/: AttackTables.cppm  AttackTables.h  Bitboards.cppm  Bitboards.h  CLI.cppm  CMakeLists.txt  Magics.cppm  Magics.h  PSQTables.cppm  PSQTables.h  Position.cppm  Position.h  Types.cppm  Types.h  Zobrist.cppm  Zobrist.h
src/engine/: CMakeLists.txt  ChessEngine.cppm  Eval.cppm  Evaluation.cppm  Evaluation.h  Evaluationv2.h  MoveGen.cppm  MoveGen.h  MovePick.h  PawnTable.cppm  PawnTable.h  Perft.cppm  Perft.h  Search.cppm  Search.h  Searchv2.h  See.cppm  See.h  TranspositionTable.cppm  TranspositionTable.h
